<resources>
    <string name="app_name">InventoryApp</string>
    <string name="table_name">Books</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="suppier_phone_number">Suppier Phone Number</string>
    <string name="quantity">Quantity</string>
    <string name="book_price">Book Price</string>
    <string name="book_name">Book Name</string>
    <string name="button">Enter</string>
    <string name="insert_book_failed">Insertion Not Successful</string>
    <string name="insert_book_successful">Insertion Successful</string>
    <string name="empty_view_title_text">Nothing here....</string>
    <string name="empty_view_subtitle_text">Start adding new entries..!</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="addbook">Add a book</string>
    <string name="aboutbook">About book</string>
    <string name="editor_insert_book_failed">Insertion failed</string>
    <string name="editor_insert_book_successful">Insertion successful</string>
    <string name="editor_update_book_failed">Could not update</string>
    <string name="editor_update_book_successful">Update successful</string>
    <string name="unsaved_changes_dialog_msg">Unsaved Changes !</string>
    <string name="discard">discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="action_save">Save</string>
    <string name="action_delete">delete</string>
    <string name="delete_dialog_msg">Are you sure you want to delete ?</string>
    <string name="delete">yes</string>
    <string name="cancel">cancel</string>
    <string name="editor_delete_book_failed">could not delete</string>
    <string name="editor_delete_book_successful">Successfully deleted</string>
    <string name="toast_max">Maximum limit is 100</string>
    <string name="toast_min">Negative values are not allowed</string>
    <string name="order_button">Order</string>
    <string name="title_empty_error">title cannot be empty</string>
    <string name="price_invalid_error">enter a valid price</string>
    <string name="quantity_missing_error">enter proper quantity</string>
    <string name="supplier_name_error">supplier name is missing</string>
    <string name="supplier_details_missing_error">please enter a suppiler number</string>
</resources>
