<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <EditText
        android:id="@+id/bookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/book_name" />

    <EditText
        android:id="@+id/bookPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/book_price" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increase_quantity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="-"
            android:onClick="decrement"/>

        <EditText
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/quantity" />

        <Button
            android:id="@+id/decrease_quantity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="+"
            android:onClick="increment"/>
    </LinearLayout>

    <EditText
        android:id="@+id/supplierName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_name" />

    <EditText
        android:id="@+id/supplierPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/suppier_phone_number" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_button"
        android:onClick="submitButton"/>
</LinearLayout>